# pier-36

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  lefthook.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
app/: .env.example  README.md  analysis_options.yaml  pubspec.yaml
app/integration_test/: app_test.dart
app/lib/: app.dart  main.dart
app/lib/design_system/: app_theme.dart  (+2 more)
app/tool/: inject_deeplink.py
docs/: design-doc.md  lld-design.md
infra/: README.md
seed-catalog/: README.md  figures.json
site/: index.html
supabase/: README.md
supabase/migrations/: 0001_init.sql  0002_seed_catalog.sql  0003_cards_readmodel.sql
worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
worker/app/: __init__.py  config.py  main.py
worker/app/api/: __init__.py  config_status.py  ingest.py
worker/app/connectors/: __init__.py  arxiv.py  base.py  factory.py  github.py  notes_git.py  reddit.py  rss.py
worker/app/db/: __init__.py  persistence.py  supabase_repo.py
worker/app/llm/: __init__.py  gateway.py
worker/app/llm/providers/: azure_openai.py  base.py  fake.py  openai_compatible.py
worker/app/pipeline/: __init__.py  ingest.py  rank.py  scheduler.py
worker/app/ranking/: __init__.py  score.py
worker/tests/: test_api_ingest.py  test_api_ingest_run.py  test_config_status.py  test_connectors.py  test_connectors_fetch.py  test_gateway.py  test_health.py  test_persistence.py  test_pipeline.py  test_ranking.py  test_scheduler.py  test_supabase_repo.py
(+44 files in other folders)
